# scratch

./: .gitignore  CMakeLists.txt  imgui.ini  imguiapp.cpp  imguidemo.cpp  main.cpp  matmul.ch  matmul.cu  matrix.h  meanshift.cpp  scratch.natvis  scratch.sln  scratch.vcxproj  scratch.vcxproj.filters  slog.cpp  slog.h  smatrix.h  stensor.cpp  stensor.h  t.py  t2.cpp  t2.h  tensor.h  tests.cpp  tt.py  unfold.py  utils.h
cnn/: app.cpp  cnn.cpp
imguiapp/: imguiapp.cpp  imguiapp.h
meanshift/: app.cpp  meanshift.cpp
scratch/: dml.cpp  matmul.cu  minst.cpp  minst.h  ptr.h  slearner.h  slog.cpp  slog.h  smodel.cpp  smodel.h  stensor.cpp  stensor.h  utils.h
scratchgui/: tools.cpp  tools.h
sgd/: app.cpp  sgd.cpp
tests/: app.cpp  test_dml.cpp  test_model.cpp  test_tensors.cpp  test_utils.cpp  tests.cpp  tests.h
